test/expected/declare_af.out
declare f as function returning auto
                                ^
33: syntax error: "auto": English expected after "returning" ("auto" is a keyword)
